--- a/.github/workflows/image-connect-iceberg.yml
+++ b/.github/workflows/image-connect-iceberg.yml
@@ -16,8 +16,8 @@ jobs:
     - uses: actions/checkout@master
     - name: Build the Docker image
       run: |
-        mkdir /my-plugins
-        cd /my-plugins
+        mkdir my-plugins
+        cd my-plugins
         wget https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-0.6.19.zip  
         wget https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-hive-0.6.19.zip 
         echo ${{ secrets.PAT }} | docker login ghcr.io -u thierrycz --password-stdin
