--- a/.github/workflows/image-connect-iceberg.yml
+++ b/.github/workflows/image-connect-iceberg.yml
@@ -18,8 +18,8 @@ jobs:
       run: |
         mkdir my-plugins
         cd my-plugins
-        wget https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-0.6.19.zip  
-        wget https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-hive-0.6.19.zip 
+        wget -q https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-0.6.19.zip  
+        wget -q https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-hive-0.6.19.zip 
         echo ${{ secrets.PAT }} | docker login ghcr.io -u thierrycz --password-stdin
         docker build . --file Dockerfile-connect-iceberg -t ghcr.io/thierrycz/kafka-connect-iceberg:0.1
         docker push ghcr.io/thierrycz/kafka-connect-iceberg:0.1
