--- a/.github/workflows/image-connect-iceberg.yml
+++ b/.github/workflows/image-connect-iceberg.yml
@@ -16,8 +16,10 @@ jobs:
     - uses: actions/checkout@master
     - name: Build the Docker image
       run: |
-        mc alias set b2666 https://s3.eu-central-003.backblazeb2.com ${{ secrets.ACCESSKEY }} ${{ secrets.SECRETKEY }}
-        mc ls b2666
+        curl -O https://dl.min.io/client/mc/release/linux-amd64/mc
+        chmod +x mc
+        ./mc alias set b2666 https://s3.eu-central-003.backblazeb2.com ${{ secrets.ACCESSKEY }} ${{ secrets.SECRETKEY }}
+        ./mc ls b2666
         mkdir my-plugins
         cd my-plugins
         #wget -q https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-0.6.19.zip  
