--- a/.github/workflows/image-connect-iceberg.yml
+++ b/.github/workflows/image-connect-iceberg.yml
@@ -17,13 +17,13 @@ jobs:
     - name: Build the Docker image
       run: |
         echo $PATH
-        curl -sO https://dl.min.io/client/mc/release/linux-amd64/mc
-        chmod +x mc
-        ~/mc alias set b2666 https://s3.eu-central-003.backblazeb2.com ${{ secrets.ACCESSKEY }} ${{ secrets.SECRETKEY }}
-        ~/mc ls --recursive b2666
+        curl -so /home/runner/.local/bin/mc https://dl.min.io/client/mc/release/linux-amd64/mc
+        chmod +x /home/runner/.local/bin/mc
+        mc alias set b2666 https://s3.eu-central-003.backblazeb2.com ${{ secrets.ACCESSKEY }} ${{ secrets.SECRETKEY }}
+        mc ls --recursive b2666
         mkdir my-plugins
         cd my-plugins
-        ~/mc cp b2/monbucket666/kafka-serde-tools.tgz .
+        mc cp b2/monbucket666/kafka-serde-tools.tgz .
         tar zxf kafka-serde-tools.tgz
         ls -l
         #wget -q https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-0.6.19.zip  
