--- a/.github/workflows/image-connect-iceberg.yml
+++ b/.github/workflows/image-connect-iceberg.yml
@@ -25,7 +25,7 @@ jobs:
         ./mc ls --recursive b2666
         mkdir my-plugins
         cd my-plugins
-        ../mc cp b2/monbucket666/kafka-serde-tools.tgz .
+        ../mc cp b2/monbucket666/kafka-serde-tools.tgz ./
         tar zxf kafka-serde-tools.tgz
         ls -l
         #wget -q https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-0.6.19.zip  
