--- a/.github/workflows/image-connect-iceberg.yml
+++ b/.github/workflows/image-connect-iceberg.yml
@@ -24,8 +24,8 @@ jobs:
         ./mc alias set b2 https://s3.eu-central-003.backblazeb2.com ${{ secrets.ACCESSKEY }} ${{ secrets.SECRETKEY }}
         ./mc ls --recursive b2
         mkdir my-plugins
+        mc cp b2/monbucket666/kafka-serde-tools.tgz my-plugins/
         cd my-plugins
-        ../mc cp b2/monbucket666/kafka-serde-tools.tgz .
         tar zxf kafka-serde-tools.tgz
         ls -l
         #wget -q https://github.com/databricks/iceberg-kafka-connect/releases/download/v0.6.19/iceberg-kafka-connect-runtime-0.6.19.zip  
